fix: Catch prefs rename and change to copy and unlink if needed
refactor: Rename 'busy' string

fix: Right sidebar loads active data on mount

--- a/lang/en.json
+++ b/lang/en.json
@@ -304,7 +304,7 @@
     "mountParameters": "Mount Parameters",
     "noMountParameters": "No Mount Parameters",
     "showExtremeScreenshot": "Show Extreme Screenshot",
-    "busy": "Busy"
+    "busy": "Please Wait..."
   },
   "tags": {
     "name": "Name",
