feat: Re-enable Curate page toggles
fix: Gulp watches static properly

--- a/lang/en.json
+++ b/lang/en.json
@@ -342,7 +342,7 @@
     "deleteAllDesc": "Delete all curations that are currently loaded",
     "saveImportedCurations": "Save Imported Curations",
     "keepArchiveKey": "Keep Curation Archive UUID",
-    "symlinkCurationContent": "Symlink Curation Content Folder (Admin prompts on Windows, Required for MAD4FP)",
+    "symlinkCurationContent": "Symlink Curation Content",
     "useTagFilters": "Use Tag Filters in Suggestions",
     "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
