feat: Help page (Manual)

--- a/lang/en.json
+++ b/lang/en.json
@@ -136,7 +136,8 @@
     "newGame": "New Game",
     "list": "List",
     "grid": "Grid",
-    "searchResults": "Search Results"
+    "searchResults": "Search Results",
+    "manual": "Help"
   },
   "filter": {
     "dateAdded": "Date Added",
