--- a/lang/fr-FR.json
+++ b/lang/fr-FR.json
@@ -114,7 +114,8 @@
     "copy404Urls": "Copier les URL 404",
     "uploadLog": "Télécharger l'historique",
     "copiedToClipboard": "Copié dans le presse-papier",
-    "openLogsWindow": "Ouvrir la fenêtre de l'historique"
+    "openLogsWindow": "Ouvrir la fenêtre de l'historique",
+    "copyDiagnostics": "Copier les diagnostics"
   },
   "app": {
     "home": "Accueil",
@@ -302,7 +303,8 @@
     "noGameMatchedSearch": "Essayez de chercher quelque chose moins restrictivement.",
     "mountParameters": "Paramètres de montage",
     "noMountParameters": "Aucun paramètre de montage",
-    "showExtremeScreenshot": "Afficher la capture d'écran extrême"
+    "showExtremeScreenshot": "Afficher la capture d'écran extrême",
+    "busy": "Veuillez patienter..."
   },
   "tags": {
     "name": "Nom",
