--- a/lang/mk-MK.json
+++ b/lang/mk-MK.json
@@ -114,7 +114,8 @@
     "copy404Urls": "Копирај 404 URLs",
     "uploadLog": "Прикачи Лог",
     "copiedToClipboard": "Копирано во Kлипборд",
-    "openLogsWindow": "Open Logs Window"
+    "openLogsWindow": "Отвори Logs Прозорец",
+    "copyDiagnostics": "Копирај Дијагностика"
   },
   "app": {
     "home": "Почеток",
@@ -277,7 +278,7 @@
     "thumbnail": "Лого",
     "screenshot": "Слика од екранот",
     "dropImageHere": "Постави слика за да ја додадеш",
-    "noGameSelected": "No {0} Selected",
+    "noGameSelected": "Нема {0} Селектирано",
     "clickToSelectGame": "Кликни на игра за да ја селектираш.",
     "deleteAdditionalApplication": "Избриши Додатната Апликација",
     "deleteGameAndAdditionalApps": "Избриши игра(и додатните апликации)",
@@ -302,7 +303,8 @@
     "noGameMatchedSearch": "Обидете се да побарате нешто помалку ограничувачко.",
     "mountParameters": "Моунт Параметри",
     "noMountParameters": "Нема Моунт Параметри",
-    "showExtremeScreenshot": "Покажувај Eкстремни Cлики од Eкраноt"
+    "showExtremeScreenshot": "Покажувај Eкстремни Cлики од Eкраноt",
+    "busy": "Ве Молиме Да Почекате..."
   },
   "tags": {
     "name": "Име",
@@ -429,7 +431,7 @@
     "exportMetaEditTitle": "Изведувај Meta Edit",
     "exportMetaEditDesc": "Изберете ги сите својства за извоз:",
     "showImage": "Покажи Слика",
-    "searching": "Searching..."
+    "searching": "Пребарување..."
   },
   "menu": {
     "viewThumbnailInFolder": "Прегледај лого во папката",
@@ -508,13 +510,13 @@
   },
   "libraries": {
     "arcade": "Игри",
-    "arcadeSingular": "Game",
+    "arcadeSingular": "Игра",
     "arcadePlural": "Сите Игри",
     "theatre": "Анимации",
-    "theatreSingular": "Animation",
+    "theatreSingular": "Анимација",
     "theatrePlural": "Сите Анимации",
     "auditorium": "НГ Аудиториум",
-    "auditoriumSingular": "Animation",
+    "auditoriumSingular": "Анимација",
     "auditoriumPlural": "Сите НГ Анимации"
   },
   "upgrades": {
