feat: Curation changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -380,13 +380,17 @@
     "removeAddApp": "Remove App",
     "indexContent": "Refresh Content",
     "delete": "Delete",
+    "deleteSelected": "Delete Selected",
     "deleteCurationDesc": "Delete this curation (Files can not be recovered)",
     "openFolder": "Open Folder",
     "run": "Run",
     "runWithMAD4FP": "Run with MAD4FP",
     "export": "Export",
+    "exportSelected": "Export Selected",
     "exportDataPacks": "Export Data Pack",
+    "exportSelectedDataPacks": "Export Selected Data Packs",
     "import": "Import",
+    "importSelected": "Import Selected",
     "contentFiles": "Content Files",
     "warnings": "Warnings",
     "noLaunchCommand": "'Launch Command' is a required field. Please fill it in before importing.",
