feat: Tag filter group nuke

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,6 +42,8 @@
     "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
     "editTagFilter": "Edit Tag Filter Group",
     "duplicateTagFilter": "Duplicate Tag Filter Group",
+    "nukeTagFilter": "Nuke Tag Filter Group",
+    "nukeInProgress": "Nuking Tags, please wait...",
     "deleteTagFilter": "Delete Tag Filter Group",
     "appPathOverrides": "App Path Overrides",
     "appPathOverridesDesc": "Overrides the application path on the left with the one on the right when launching games.",
@@ -513,6 +515,7 @@
     "overwriteFileTitle": "File already exists!",
     "overwriteFileMessage": "A file with the same name already exists. Do you want to overwrite it?",
     "overwriteFileDetail": "File path:",
+    "nukeTagFilterGroup": "Nuke this tag filter group?\nAll games with these tags will be deleted and unrecoverable.\nThis may take a long time.",
     "deleteTagFilterGroup": "Delete this Tag Filter Group?",
     "deleteCuration": "Delete this Curation?",
     "importCuration": "Import this Curation?",
