feat: WIP In-app dialog boxes
refactor: Improved update button size

fix: Nexus workflow

--- a/lang/en.json
+++ b/lang/en.json
@@ -542,7 +542,8 @@
     "mustBePngImage": "Must be a .PNG Image.",
     "mustBe7zArchiveSkipping": "Must be a .7z archive, skipping {0}",
     "failedToLoadCuration": "Failed to load curation! {0}",
-    "exportCurationWithWarnings": "Export Curation even though it has Warnings?"
+    "exportCurationWithWarnings": "Export Curation even though it has Warnings?",
+    "requiresAdditionalDownload": "You are missing the {0} support pack, which is required to launch this entry.\nDownload now?"
   },
   "libraries": {
     "arcade": "Games",
