--- a/lang/en.json
+++ b/lang/en.json
@@ -545,7 +545,8 @@
     "mustBe7zArchiveSkipping": "Must be a .7z archive, skipping {0}",
     "failedToLoadCuration": "Failed to load curation! {0}",
     "exportCurationWithWarnings": "Export Curation even though it has Warnings?",
-    "requiresAdditionalDownload": "You are missing the {0} support pack, which is required to launch this entry.\nDownload now?"
+    "requiresAdditionalDownload": "You are missing the {0} support pack, which is required to launch this entry.\nDownload now?",
+    "requiresAdditionalDownloadPlural": "You are missing {0} support packs which are required to launch this entry.\nDownload now?"
   },
   "libraries": {
     "arcade": "Games",
